--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/root",
-	"version": "0.37.13",
+	"version": "0.37.14",
 	"description": "An easy to use opinionated tool for building, testing, and deploying Tezos software",
 	"main": "index.ts",
 	"directories": {
@@ -16,6 +16,7 @@
 		"parse-readme-template": "ts-node ./parse-readme-template.ts",
 		"build-website": "npm run parse-readme-template && cd website && npm ci --legacy-peer-deps && npm run build",
 		"serve-website": "cd website && npm run serve",
+		"deploy-website": "cd website && npm run deploy",
 		"watch": "npx chokidar \"*.ts\" \"taqueria-utils/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run build\" --initial",
 		"build-and-watch-vscode": "npx chokidar \"*.ts\" \"taqueria-vscode-extension/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run compile -w taqueria-vscode-extension\" --initial",
 		"prepare": "husky install",
@@ -72,17 +73,5 @@
 		"./taqueria-vscode-extension-web-ui",
 		"./taqueria-plugin*",
 		"./tests"
-	],
-	"lint-staged": {
-		"*.{ts,tsx,jsx,cjs,mjs,json}": "npx dprint fmt"
-	},
-	"dependencies": {
-		"@docusaurus-terminology/parser": "^1.3.0",
-		"@docusaurus-terminology/term": "^1.0.0",
-		"@docusaurus/core": "^2.1.0",
-		"@docusaurus/plugin-google-analytics": "^2.1.0",
-		"@docusaurus/plugin-google-gtag": "^2.1.0",
-		"@docusaurus/plugin-sitemap": "^2.1.0",
-		"@docusaurus/preset-classic": "^2.4.1"
-	}
+	]
 }
