--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "start": "docusaurus start",
     "build": "docusaurus parse && docusaurus glossary && docusaurus build && cp redirects.txt build/_redirects",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy-preview": "npx wrangler pages deploy build --branch preview --project-name taqueria",
+    "deploy": "npx wrangler pages deploy build --project-name taqueria",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
@@ -58,6 +59,7 @@
     "crypto-browserify": "^3.12.0",
     "docusaurus2-dotenv": "^1.4.0",
     "path-browserify": "^1.0.1",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "wrangler": "^3.4.0"
   }
 }
