Publish both preview and production builds of website

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -214,6 +214,33 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  # Publish website
+  publish-website:
+    needs: [check_is_release]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download work archive
+        uses: actions/download-artifact@v2
+        with:
+          name: work-ubuntu-latest
+          path: .
+
+      - name: Extract work archive
+        run: tar -xzpf work.tar.gz
+
+      - name: Build Website
+        run: |
+          TAQ_VERSION=${{ needs.check_is_release.outputs.version }} npm run build-website
+      
+      - name: Publish Website (Preview)
+        id: publish-website-preview
+        if: needs.check_is_release.outputs.is_release == 'no'
+        run: cd website && CLOUDFLARE_ACCOUNT_ID=${{ secrets.CLOUDFLARE_ACCOUNT_ID }} npm run deploy-preview
+
+      - name: Publish Website (Production)
+        id: publish-website
+        if: needs.check_is_release.outputs.is_release == 'yes'
+        run: cd website && CLOUDFLARE_ACCOUNT_ID=${{ secrets.CLOUDFLARE_ACCOUNT_ID }} npm run deploy
           
   # Publish binaries to Github Releases
   publish-release:
@@ -286,14 +313,6 @@ jobs:
           asset_path: vscode-extension/${{ steps.vsix.outputs.artifact }}
           asset_name: taqueria.vsix
           asset_content_type: application/octet-stream
-
-      - name: Build Website
-        run: |
-          TAQ_VERSION=${{ needs.check_is_release.outputs.version }} npm run build-website
-      
-      - name: Publish website
-        id: publish-website
-        run: CLOUDFLARE_ACCOUNT_ID=${{ secrets.CLOUDFLARE_ACCOUNT_ID }} npm run deploy-website
 
   publish-vscode:
     needs: [build-packages, check_is_release]
