Adjust build-website workflow job to depend on build-binaries job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -216,7 +216,7 @@ jobs:
 
   # Publish website
   publish-website:
-    needs: [check_is_release]
+    needs: [build-binaries, check_is_release]
     runs-on: ubuntu-latest
     steps:
       - name: Download work archive
