--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-taquito",
-	"version": "0.37.49",
+	"version": "0.37.50",
 	"description": "A taqueria plugin for originating smart contracts using Taquito",
 	"targets": {
 		"default": {
@@ -42,11 +42,12 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.37.49",
-		"@taquito/michel-codec": "^17.1.0",
-		"@taquito/signer": "^17.1.0",
-		"@taquito/taquito": "^17.1.0",
-		"fast-glob": "^3.2.12"
+		"@taqueria/node-sdk": "^0.37.50",
+		"@taquito/michel-codec": "^17.2.0",
+		"@taquito/signer": "^17.2.0",
+		"@taquito/taquito": "^17.2.0",
+		"fast-glob": "^3.2.12",
+		"wtfnode": "^0.9.1"
 	},
 	"devDependencies": {
 		"tsup": "6.5.0",
