--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.37.49",
+	"version": "0.37.50",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -34,7 +34,7 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/protocol": "^0.37.49",
+		"@taqueria/protocol": "^0.37.50",
 		"@taquito/signer": "^15.0.0",
 		"@taquito/taquito": "^15.0.0",
 		"@taquito/utils": "^15.0.0",
@@ -44,6 +44,7 @@
 		"rambda": "^7.5.0",
 		"stacktrace-js": "^2.0.2",
 		"ts-pattern": "^5.0.1",
+		"why-is-node-running": "^2.2.2",
 		"yargs": "^17.7.2",
 		"zod": "^3.21.4"
 	},
