--- a/.github/workflows/update-ligo.yml
+++ b/.github/workflows/update-ligo.yml
@@ -28,6 +28,8 @@ jobs:
       run: |
         cd taqueria
         if [[ $(git status -s) ]]; then
+          git config user.email "michael@pinnaclelabs.limited"
+          git config user.name "Michael Weichert"
           git add -A
           git commit -m "Updated LIGO grammars to the latest version"
           git push
