Updated all dependencies. Support NodeJS v18

--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
 		"npm-check-updates": "^16.10.12",
 		"ts-node": "^10.9.1",
 		"ts-to-zod": "^1.13.1",
-		"tsup": "6.5.0",
-		"typescript": "^4.9.5",
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2",
 		"with-staged": "^1.0.2"
 	},
 	"workspaces": [
