--- a/taqueria-plugin-octez-client/package.json
+++ b/taqueria-plugin-octez-client/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@taqueria/plugin-tezos-client",
+	"name": "@taqueria/plugin-octez-client",
 	"version": "0.39.19",
-	"description": "A taqueria plugin for utilizing tezos-client",
+	"description": "A taqueria plugin for utilizing octez-client",
 	"targets": {
 		"default": {
 			"source": "./index.ts",
@@ -18,11 +18,11 @@
 	"keywords": [
 		"taqueria",
 		"tezos",
-		"build",
 		"pinnaclelabs",
 		"pinnacle-labs",
 		"plugin",
 		"tezos-client",
+		"octez-client",
 		"typecheck",
 		"simulate"
 	],
@@ -42,11 +42,11 @@
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
 		"@taqueria/node-sdk": "^0.39.19",
-		"fast-glob": "^3.2.12"
+		"fast-glob": "^3.3.1"
 	},
 	"devDependencies": {
-		"tsup": "6.5.0",
-		"typescript": "^4.9.5"
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"tsup": {
 		"entry": [
