--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -43,15 +43,15 @@
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
 		"@taqueria/node-sdk": "^0.39.19",
-		"@taquito/michel-codec": "^17.2.0",
-		"@taquito/signer": "^17.2.0",
-		"@taquito/taquito": "^17.2.0",
-		"fast-glob": "^3.2.12",
+		"@taquito/michel-codec": "^17.3.1",
+		"@taquito/signer": "^17.3.1",
+		"@taquito/taquito": "^17.3.1",
+		"fast-glob": "^3.3.1",
 		"wtfnode": "^0.9.1"
 	},
 	"devDependencies": {
-		"tsup": "6.5.0",
-		"typescript": "^4.9.5"
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"tsup": {
 		"entry": [
