--- a/taqueria-plugin-contract-types/package.json
+++ b/taqueria-plugin-contract-types/package.json
@@ -11,12 +11,12 @@
 		"build": "npx tsc -noEmit && npx tsup",
 		"build-ci": "npm run build",
 		"debugPluginInfo": "node --inspect-brk index.js --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}",
-		"examples": "npm run example && npm run example-json && npm run example-simple && npm run example-file && npm run example-local",
-		"example": "npx ts-node run.ts --g ./example/contracts ./example/types",
-		"example-json": "npx ts-node run.ts --json --g ./example/contracts ./example/types",
-		"example-simple": "npx ts-node run.ts --types simple --g ./example/contracts ./example/types-simple",
-		"example-file": "npx ts-node run.ts --types file --g ./example/contracts ./example/types-file",
-		"example-local": "npx ts-node run.ts --types local --g ./example/contracts ./example/types-local",
+		"examples": "npm run build && npm run example && npm run example-json && npm run example-simple && npm run example-file && npm run example-local",
+		"example": "node run.js --g ./example/contracts ./example/types",
+		"example-json": "node run.js --json --g ./example/contracts ./example/types",
+		"example-simple": "node run.js --types simple --g ./example/contracts ./example/types-simple",
+		"example-file": "node run.js --types file --g ./example/contracts ./example/types-file",
+		"example-local": "node run.js --types local --g ./example/contracts ./example/types-local",
 		"example-jest-test-generation": "npx ts-node ./src/generator/testing-code-generator-jest-demo.ts",
 		"test": "npm run examples && npx jest"
 	},
@@ -24,13 +24,14 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/jest": "^29.5.3",
-		"@types/node": "^17.0.35",
-		"rimraf": "^3.0.2",
+		"@types/jest": "^29.5.5",
+		"@types/node": "^20.6.2",
+		"rimraf": "^5.0.1",
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"tsconfig-paths": "^4.2.0",
 		"tslint": "^6.1.3",
+		"tsup": "^7.2.0",
 		"typescript": "^5.2.2"
 	},
 	"dependencies": {
@@ -52,7 +53,8 @@
 		"entry": [
 			"index.ts",
 			"src/cli-process.ts",
-			"src/generator/testing-code-generator.ts"
+			"src/generator/testing-code-generator.ts",
+			"run.ts"
 		],
 		"sourcemap": true,
 		"target": "node16",
