--- a/taqueria-plugin-contract-types/tsconfig.json
+++ b/taqueria-plugin-contract-types/tsconfig.json
@@ -11,7 +11,8 @@
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true,
-		"outDir": "lib"
+		"outDir": "lib",
+		"moduleResolution": "node",
 	},
 	"exclude": [
 		"example"
