--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -39,8 +39,8 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
-		"tsup": "6.5.0",
-		"typescript": "^4.9.5"
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"dependencies": {
 		"@taqueria/node-sdk": "^0.39.19"
