--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -29,21 +29,21 @@
 	"dependencies": {
 		"@taqueria/node-sdk": "^0.39.19",
 		"@taqueria/plugin-contract-types": "^0.39.19",
-		"@taquito/signer": "^16.2.0",
-		"@taquito/taquito": "^16.2.0",
-		"@taquito/utils": "^16.2.0",
+		"@taquito/signer": "^17.3.1",
+		"@taquito/taquito": "^17.3.1",
+		"@taquito/utils": "^17.3.1",
 		"@types/jest": "^29.5.3",
 		"async-retry": "^1.3.3",
-		"bignumber.js": "^9.1.1",
-		"execa": "^6.1.0",
-		"fast-glob": "^3.2.12",
+		"bignumber.js": "^9.1.2",
+		"execa": "^8.0.1",
+		"fast-glob": "^3.3.1",
 		"jest-config": "^29.6.3",
 		"ts-jest": "^29.1.1"
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.5",
-		"tsup": "6.5.0",
-		"typescript": "4.7.2"
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"tsup": {
 		"entry": [
