--- a/taqueria-plugin-metadata/package.json
+++ b/taqueria-plugin-metadata/package.json
@@ -37,8 +37,8 @@
 	},
 	"devDependencies": {
 		"@types/prompts": "^2.4.4",
-		"tsup": "6.5.0",
-		"typescript": "4.7.2"
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"tsup": {
 		"entry": [
