--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -31,9 +31,9 @@
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
 		"esbuild-plugin-text-replace": "^1.3.0",
-		"ts-to-zod": "^1.13.1",
-		"tsup": "6.5.0",
-		"typescript": "^4.9.5"
+		"ts-to-zod": "^3.1.3",
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"exports": {
 		".": "./index.js",
@@ -54,10 +54,10 @@
 		"@peculiar/webcrypto": "^1.4.3",
 		"batching-toposort": "^1.2.0",
 		"fluture": "^14.0.0",
-		"i18next": "^21.10.0",
-		"rambda": "^7.5.0",
-		"rambdax": "^8.1.0",
-		"zod": "^3.21.4"
+		"i18next": "^23.5.1",
+		"rambda": "^8.3.0",
+		"rambdax": "^10.0.0",
+		"zod": "^3.22.2"
 	},
 	"gitHead": "ff58a2fc06ad233869ad6be574093c8b3b272e2e"
 }
