--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -35,26 +35,26 @@
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
 		"@taqueria/protocol": "^0.39.19",
-		"@taquito/signer": "^15.0.0",
-		"@taquito/taquito": "^15.0.0",
-		"@taquito/utils": "^15.0.0",
-		"i18next": "^21.10.0",
-		"node-fetch": "^2.6.11",
+		"@taquito/signer": "^17.3.1",
+		"@taquito/taquito": "^17.3.1",
+		"@taquito/utils": "^17.3.1",
+		"i18next": "^23.5.1",
+		"node-fetch": "^3.3.2",
 		"project-name-generator": "^2.1.9",
-		"rambda": "^7.5.0",
+		"rambda": "^8.3.0",
 		"stacktrace-js": "^2.0.2",
-		"ts-pattern": "^5.0.1",
+		"ts-pattern": "^5.0.5",
 		"why-is-node-running": "^2.2.2",
 		"yargs": "^17.7.2",
-		"zod": "^3.21.4"
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@bevry/jsonfile": "^1.3.0",
-		"@types/node": "^17.0.12",
+		"@types/node": "^20.6.2",
 		"@types/project-name-generator": "^2.1.1",
 		"@types/yargs": "^17.0.24",
-		"tsup": "6.5.0",
-		"typescript": "^4.9.5"
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"tsup": {
 		"entry": [
