--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -30,11 +30,11 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
-		"@types/cross-spawn": "^6.0.2",
-		"@types/node": "^17.0.12",
+		"@types/cross-spawn": "^6.0.3",
+		"@types/node": "^20.6.2",
 		"@types/yargs": "^17.0.24",
-		"tsup": "6.5.0",
-		"typescript": "^4.9.5"
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"dependencies": {
 		"@taqueria/protocol": "^0.39.19",
