--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -6,8 +6,7 @@
 	"version": "0.39.19",
 	"private": true,
 	"engines": {
-		"vscode": "^1.79.1",
-		"node": "^16.0.0"
+		"vscode": "^1.82.0"
 	},
 	"engineStrict": true,
 	"extensionKind": [
@@ -717,18 +716,17 @@
 		"@types/node": "^17.0.17",
 		"@types/promise-memoize": "^1.2.1",
 		"@types/semver": "^7.5.0",
-		"@types/vscode": "^1.79.1",
+		"@types/vscode": "^1.82.0",
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
 		"@typescript-eslint/parser": "^5.60.0",
 		"@vscode/test-electron": "^2.3.3",
-		"@vscode/vsce": "^2.20.1",
+		"@vscode/vsce": "^2.21.0",
 		"esbuild": "^0.14.54",
 		"eslint": "^8.43.0",
 		"fs-extra": "^10.1.0",
 		"glob": "^7.2.3",
 		"mocha": "^9.2.2",
-		"typescript": "4.7.2",
-		"vsce": "^2.15.0"
+		"typescript": "4.7.2"
 	},
 	"dependencies": {
 		"@microsoft/signalr": "^6.0.18",
