--- a/taqueria-plugin-ipfs-pinata/package.json
+++ b/taqueria-plugin-ipfs-pinata/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-ipfs-pinata",
-	"version": "0.39.22",
+	"version": "0.39.23",
 	"description": "A plugin for Taqueria providing ipfs publishing and pinning using the Pinata service",
 	"keywords": [
 		"taqueria",
@@ -33,10 +33,11 @@
 		"directory": "taqueria-plugin-ipfs-pinata"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.39.22",
+		"@helia/unixfs": "^1.4.2",
+		"@taqueria/node-sdk": "^0.39.23",
 		"dotenv": "^16.3.1",
 		"form-data": "^4.0.0",
-		"multiformats": "^12.1.1",
+		"helia": "^2.0.3",
 		"node-fetch": "^3.3.2"
 	},
 	"devDependencies": {
@@ -44,16 +45,31 @@
 		"tsup": "^7.2.0",
 		"typescript": "^5.2.2"
 	},
+	"exports": {
+		".": {
+			"import": "./index.js",
+			"require": "./index.cjs",
+			"node": "./index.cjs",
+			"default": "./index.js"
+		},
+		"./src/ipfsHash": {
+			"import": "./src/ipfsHash.js",
+			"require": "./src/ipfsHash.cjs",
+			"node": "./src/ipfsHash.cjs",
+			"default": "./src/ipfsHash.js"
+		}
+	},
 	"tsup": {
 		"entry": [
-			"index.ts"
+			"index.ts",
+			"src/ipfsHash.ts"
 		],
 		"sourcemap": true,
 		"target": "node16",
 		"outDir": "./",
 		"dts": true,
 		"clean": false,
-		"skipNodeModulesBundle": true,
+		"skipNodeModulesBundle": false,
 		"platform": "node",
 		"format": [
 			"esm",
