--- a/taqueria-plugin-ipfs-pinata/tsconfig.json
+++ b/taqueria-plugin-ipfs-pinata/tsconfig.json
@@ -11,7 +11,7 @@
 		// "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
 		/* Language and Environment */
-		"target": "ES2021", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+		"target": "ES2020", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 		"lib": [
 			"ES2021.String"
 		], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
@@ -28,7 +28,7 @@
 		/* Modules */
 		"module": "CommonJS", /* Specify what module code is generated. */
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
-		// "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
+		"moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
 		// "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
 		// "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
