--- a/taqueria-plugin-ligo-legacy/package.json
+++ b/taqueria-plugin-ligo-legacy/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@taqueria/plugin-ligo",
+	"name": "@taqueria/plugin-ligo-legacy",
 	"version": "0.40.9",
-	"description": "A taqueria plugin for compiling LIGO smart contracts",
+	"description": "A taqueria plugin for compiling LIGO smart contracts that target LIGO v0.73.0 and earlier.",
 	"targets": {
 		"default": {
 			"source": "./index.ts",
