--- a/taqueria-plugin-ligo-legacy/package.json
+++ b/taqueria-plugin-ligo-legacy/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-ligo-legacy",
-	"version": "0.40.9",
+	"version": "0.40.10",
 	"description": "A taqueria plugin for compiling LIGO smart contracts that target LIGO v0.73.0 and earlier.",
 	"targets": {
 		"default": {
@@ -41,7 +41,8 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.40.9",
+		"@taqueria/lib-ligo": "^0.40.10",
+		"@taqueria/node-sdk": "^0.40.10",
 		"fast-glob": "^3.3.1"
 	},
 	"devDependencies": {
