--- a/taqueria-lib-ligo/package.json
+++ b/taqueria-lib-ligo/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/lib-ligo",
-	"version": "0.40.10",
+	"version": "0.40.12",
 	"description": "A taqueria library which provides common functionality for the LIGO and LIGO Legacy Plugins",
 	"targets": {
 		"default": {
@@ -33,7 +33,7 @@
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/pinnacle-labs/taqueria.git",
+		"url": "git+https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-ligo"
 	},
 	"bugs": {
@@ -41,7 +41,7 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.40.10",
+		"@taqueria/node-sdk": "^0.40.12",
 		"fast-glob": "^3.3.1"
 	},
 	"devDependencies": {
