--- a/taqueria-plugin-ligo-legacy/package.json
+++ b/taqueria-plugin-ligo-legacy/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-ligo-legacy",
-	"version": "0.40.10",
+	"version": "0.40.12",
 	"description": "A taqueria plugin for compiling LIGO smart contracts that target LIGO v0.73.0 and earlier.",
 	"targets": {
 		"default": {
@@ -33,7 +33,7 @@
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/pinnacle-labs/taqueria.git",
+		"url": "git+https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-ligo"
 	},
 	"bugs": {
@@ -41,8 +41,8 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/lib-ligo": "^0.40.10",
-		"@taqueria/node-sdk": "^0.40.10",
+		"@taqueria/lib-ligo": "^0.40.12",
+		"@taqueria/node-sdk": "^0.40.12",
 		"fast-glob": "^3.3.1"
 	},
 	"devDependencies": {
