--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.40.21",
+	"version": "0.40.22",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -34,13 +34,14 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/protocol": "^0.40.21",
+		"@taqueria/protocol": "^0.40.22",
 		"@taquito/signer": "^17.3.1",
 		"@taquito/taquito": "^17.3.1",
 		"@taquito/utils": "^17.3.1",
 		"i18next": "^23.5.1",
 		"node-fetch": "^3.3.2",
 		"rambda": "^8.3.0",
+		"shell-quote": "^1.8.1",
 		"stacktrace-js": "^2.0.2",
 		"ts-pattern": "^5.0.5",
 		"why-is-node-running": "^2.2.2",
@@ -51,6 +52,7 @@
 		"@bevry/jsonfile": "^1.3.0",
 		"@types/node": "^20.6.2",
 		"@types/project-name-generator": "^2.1.1",
+		"@types/shell-quote": "^1.7.2",
 		"@types/yargs": "^17.0.24",
 		"tsup": "^7.2.0",
 		"typescript": "^5.2.2"
