--- a/taqueria-plugin-contract-types/package.json
+++ b/taqueria-plugin-contract-types/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-contract-types",
-	"version": "0.40.33",
+	"version": "0.40.34",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -34,10 +34,10 @@
 		"typescript": "^5.2.2"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.40.33",
-		"@taquito/michel-codec": "^17.3.1",
-		"@taquito/signer": "^17.3.1",
-		"@taquito/taquito": "^17.3.1",
+		"@taqueria/node-sdk": "^0.40.34",
+		"@taquito/michel-codec": "^18.0.0-RC.0",
+		"@taquito/signer": "^18.0.0-RC.0",
+		"@taquito/taquito": "^18.0.0-RC.0",
 		"bignumber.js": "^9.1.2",
 		"fast-glob": "^3.3.1"
 	},
