--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-flextesa",
-	"version": "0.40.33",
+	"version": "0.40.34",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on Flextesa",
 	"keywords": [
 		"taqueria",
@@ -34,9 +34,10 @@
 		"directory": "taqueria-plugin-flextesa"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.40.33",
-		"@taqueria/protocol": "^0.40.33",
+		"@taqueria/node-sdk": "^0.40.34",
+		"@taqueria/protocol": "^0.40.34",
 		"async-retry": "^1.3.3",
+		"bignumber.js": "^9.1.2",
 		"fast-glob": "^3.2.12",
 		"portfinder": "^1.0.32",
 		"rambda": "^7.5.0"
