--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.40.33",
+	"version": "0.40.34",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -27,11 +27,11 @@
 		"directory": "taqueria-plugin-jest"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.40.33",
-		"@taqueria/plugin-contract-types": "^0.40.33",
-		"@taquito/signer": "^17.3.1",
-		"@taquito/taquito": "^17.3.1",
-		"@taquito/utils": "^17.3.1",
+		"@taqueria/node-sdk": "^0.40.34",
+		"@taqueria/plugin-contract-types": "^0.40.34",
+		"@taquito/signer": "^18.0.0-RC.0",
+		"@taquito/taquito": "^18.0.0-RC.0",
+		"@taquito/utils": "^18.0.0-RC.0",
 		"@types/jest": "^29.5.3",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
