--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-taquito",
-	"version": "0.40.33",
+	"version": "0.40.34",
 	"description": "A taqueria plugin for originating smart contracts using Taquito",
 	"targets": {
 		"default": {
@@ -42,10 +42,10 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.40.33",
-		"@taquito/michel-codec": "^17.3.1",
-		"@taquito/signer": "^17.3.1",
-		"@taquito/taquito": "^17.3.1",
+		"@taqueria/node-sdk": "^0.40.34",
+		"@taquito/michel-codec": "^18.0.0-RC.0",
+		"@taquito/signer": "^18.0.0-RC.0",
+		"@taquito/taquito": "^18.0.0-RC.0",
 		"fast-glob": "^3.3.1",
 		"wtfnode": "^0.9.1"
 	},
