--- a/taqueria-plugin-contract-types/tsconfig.json
+++ b/taqueria-plugin-contract-types/tsconfig.json
@@ -12,7 +12,7 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"outDir": "lib",
-		"moduleResolution": "node",
+		"moduleResolution": "node"
 	},
 	"exclude": [
 		"example"
