--- a/taqueria-plugin-contract-types/package.json
+++ b/taqueria-plugin-contract-types/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-contract-types",
-	"version": "0.45.3",
+	"version": "0.45.4",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -24,22 +24,22 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/jest": "^29.5.5",
-		"@types/node": "^20.6.2",
-		"rimraf": "^5.0.1",
+		"@types/jest": "^29.5.11",
+		"@types/node": "^20.10.4",
+		"rimraf": "^5.0.5",
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"tsconfig-paths": "^4.2.0",
-		"tsup": "^7.2.0",
-		"typescript": "^5.2.2"
+		"tsup": "^8.0.1",
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.45.3",
-		"@taquito/michel-codec": "^18.0.0-RC.0",
-		"@taquito/signer": "^18.0.0-RC.0",
-		"@taquito/taquito": "^18.0.0-RC.0",
+		"@taqueria/node-sdk": "^0.45.4",
+		"@taquito/michel-codec": "^17.4.0",
+		"@taquito/signer": "^17.4.0",
+		"@taquito/taquito": "^17.4.0",
 		"bignumber.js": "^9.1.2",
-		"fast-glob": "^3.3.1"
+		"fast-glob": "^3.3.2"
 	},
 	"types": "index.esm.d.ts",
 	"jest": {
