--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.45.9",
+	"version": "0.45.11",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -27,23 +27,23 @@
 		"directory": "taqueria-plugin-jest"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.45.9",
-		"@taqueria/plugin-contract-types": "^0.45.9",
-		"@taquito/signer": "^18.0.0-RC.0",
-		"@taquito/taquito": "^18.0.0-RC.0",
-		"@taquito/utils": "^18.0.0-RC.0",
-		"@types/jest": "^29.5.3",
+		"@taqueria/node-sdk": "^0.45.11",
+		"@taqueria/plugin-contract-types": "^0.45.11",
+		"@taquito/signer": "^17.4.0",
+		"@taquito/taquito": "^17.4.0",
+		"@taquito/utils": "^17.4.0",
+		"@types/jest": "^29.5.11",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
 		"execa": "^8.0.1",
-		"fast-glob": "^3.3.1",
-		"jest-config": "^29.6.3",
+		"fast-glob": "^3.3.2",
+		"jest-config": "^29.7.0",
 		"ts-jest": "^29.1.1"
 	},
 	"devDependencies": {
-		"@types/async-retry": "^1.4.5",
-		"tsup": "^7.2.0",
-		"typescript": "^5.2.2"
+		"@types/async-retry": "^1.4.8",
+		"tsup": "^8.0.1",
+		"typescript": "^5.3.3"
 	},
 	"tsup": {
 		"entry": [
