--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,8 @@
 {
 	"imports": {
-		"streams": "https://deno.land/std@0.115.1/streams/conversion.ts",
-		"eta": "https://deno.land/x/eta@v1.12.3/mod.ts",
-		"zod": "https://deno.land/x/zod@v3.14.4/mod.ts",
-		"util": "https://deno.land/std@0.85.0/node/util.ts",
-		"path": "https://deno.land/std@0.120.0/path/mod.ts",
+		"eta": "https://deno.land/x/eta@v3.2.0/src/index.ts",
+		"zod": "https://deno.land/x/zod@v3.16.1/mod.ts",
+		"path": "https://deno.land/std@0.213.0/path/mod.ts",
 		"fun": "https://deno.land/x/fun@v1.0.0/fns.ts",
 		"jsonc": "https://deno.land/x/jsonc@1/main.ts",
 		"ts-pattern": "https://cdn.skypack.dev/ts-pattern@5.0.1?dts",
@@ -13,6 +11,16 @@
 		"rambda": "https://cdn.skypack.dev/rambda@7.2.1",
 		"rambdax": "https://cdn.skypack.dev/rambdax@8.1.0",
 		"machine-id": "https://deno.land/x/machine_id@v0.3.0/mod.ts",
+		"colors": "https://deno.land/std@0.213.0/fmt/colors.ts",
+		"case": "https://deno.land/x/case@2.1.1/mod.ts",
+		"cliffy": "https://deno.land/x/cliffy@v0.20.1/table/mod.ts",
+		"deno-yargs-types": "https://deno.land/x/yargs@v17.4.0-deno/deno-types.ts",
+		"deno-yargs": "https://deno.land/x/yargs@v17.4.0-deno/deno.ts",
+		"deno-stdlib-streams": "https://deno.land/std@0.213.0/streams/mod.ts",
+		"deno-stdlib-writers": "https://deno.land/std@0.213.0/io/writers.ts",
+		"deno-asserts": "https://deno.land/std@0.213.0/testing/asserts.ts",
+		"deno-stdlib-fs": "https://deno.land/std@0.213.0/fs/mod.ts",
+		"retronid": "https://cdn.skypack.dev/retronid",
 		"@taqueria/analytics": "./taqueria-analytics/index.ts",
 		"@taqueria/analytics/types": "./taqueria-analytics/types.ts",
 		"@peculiar/webcrypto": "./taqueria-protocol/SHA256.ts",
