--- a/taqueria-plugin-tzcompose/package.json
+++ b/taqueria-plugin-tzcompose/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@taqueria/plugin-helloworld",
+	"name": "@taqueria/plugin-tzcompose",
 	"version": "0.48.1",
-	"description": "An example of a plugin for Taqueria",
+	"description": "A TzCompose plugin for Taqueria using the GoTz SDK",
 	"main": "index.js",
 	"scripts": {
 		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup"
@@ -9,8 +9,10 @@
 	"keywords": [
 		"taqueria",
 		"plugin",
-		"helloworld",
-		"tezos"
+		"tzcompose",
+		"tezos",
+		"deploy",
+		"gotz"
 	],
 	"author": "Pinnacle Labs <support@pinnaclelabs.limited>",
 	"license": "Apache-2.0",
@@ -19,7 +21,7 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "0.41.0"
+		"@taqueria/node-sdk": "^0.48.1"
 	},
 	"tsup": {
 		"entry": [
