--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Taqueria (by Pinnacle Labs)",
 	"description": "A better way to build on Tezos",
 	"publisher": "PinnacleLabs",
-	"version": "0.49.1",
+	"version": "0.49.2",
 	"private": true,
 	"engines": {
 		"vscode": "^1.84.2"
@@ -703,7 +703,7 @@
 		"compile": "npx tsc -noEmit && npm run compile:base -- --sourcemap",
 		"compile:watch": "npm run compile:base -- --sourcemap --watch",
 		"compile:test": "tsc -p tsconfig.test.json",
-		"build": "npm run compile && npx vsce package",
+		"build": "npm run compile && npx vsce package --no-dependencies",
 		"pretest": "npm run compile:test",
 		"test": "./bin/run-tests.sh"
 	},
@@ -726,14 +726,14 @@
 	},
 	"dependencies": {
 		"@microsoft/signalr": "^8.0.0",
-		"@taqueria/analytics": "^0.49.1",
-		"@taqueria/protocol": "^0.49.1",
+		"@taqueria/analytics": "^0.49.2",
+		"@taqueria/protocol": "^0.49.2",
 		"cli-table3": "^0.6.3",
 		"comment-json": "^4.2.3",
 		"eventsource": "^2.0.2",
 		"node-fetch-commonjs": "^3.3.2",
 		"promise-memoize": "^1.2.1",
-		"rambda": "^9.0.1",
+		"rambda": "^9.1.0",
 		"rxjs": "^7.8.1",
 		"semver": "^7.5.4"
 	}
