--- a/taqueria-plugin-helloworld/package.json
+++ b/taqueria-plugin-helloworld/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-helloworld",
-	"version": "0.49.4",
+	"version": "0.49.5",
 	"description": "An example of a plugin for Taqueria",
 	"main": "index.js",
 	"scripts": {
@@ -19,7 +19,7 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "0.48.0"
+		"@taqueria/node-sdk": "^0.49.5"
 	},
 	"tsup": {
 		"entry": [
