--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
 
       - name: Install dependencies
-        run: npm ci
+        run: rm -rf node_modules && npm ci
 
       - name: Build types
         run: npm run build-types
