Added documentation for TzCompose plugin

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Taqueria Questions
-    url: https://discord.gg/U8Jb9xFrUC
+    url: https://discord.gg/tezos
     about: If you have a question about Taqueria, please ask on our Discord server.
