Fixed contract types tests. Adjusted Ghost RPC url to use ECAD Labs Infrastructure

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -485,7 +485,7 @@ jobs:
         env:
           HUSKY_SKIP_INSTALL: 1
           HUSKY: 0
-          TAQ_TEZOS_CLIENT_RPC: https://ghostnet.tezos.marigold.dev
+          TAQ_TEZOS_CLIENT_RPC: https://ghostnet.ecadinfra.com
         run: |
           CWD=$(pwd)
           export PATH=$PATH:$CWD
