--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.50.0",
+	"version": "0.50.1",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -27,8 +27,8 @@
 		"directory": "taqueria-plugin-jest"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.50.0",
-		"@taqueria/plugin-contract-types": "^0.50.0",
+		"@taqueria/node-sdk": "^0.50.1",
+		"@taqueria/plugin-contract-types": "^0.50.1",
 		"@taquito/signer": "^19.1.0",
 		"@taquito/taquito": "^19.1.0",
 		"@taquito/utils": "^19.1.0",
@@ -36,9 +36,7 @@
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
 		"execa": "^8.0.1",
-		"fast-glob": "^3.3.2",
-		"jest-config": "^29.7.0",
-		"ts-jest": "^29.1.2"
+		"fast-glob": "^3.3.2"
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.8",
