--- a/taqueria-plugin-smartpy/package.json
+++ b/taqueria-plugin-smartpy/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "@taqueria/plugin-smartpy",
-	"version": "0.50.3",
+	"version": "0.50.4",
 	"description": "A taqueria plugin used to test and compile smart contracts written in SmartPy.",
 	"main": "index.js",
-	"tag": "next",
+	"tag": "auto",
 	"targets": {
 		"default": {
 			"source": "./index.ts",
@@ -43,7 +43,7 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.50.3",
+		"@taqueria/node-sdk": "^0.50.4",
 		"fast-glob": "^3.3.2"
 	},
 	"devDependencies": {
